src/aks/2-netwok-policy/02-test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-web
  labels:
    app: demo-web
spec:
  ports:
  - port: 80
    name: http
    targetPort: 80
  selector:
    app: demo-web
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-web
spec:
  selector:
    matchLabels:
      app: demo-web
  template:
    metadata:
      labels:
        app: demo-web
    spec:
      containers:
      - name: demo-web
        image: visouza/httpd:demo
        ports:
        - containerPort: 80
          name: "http"
