src/aks/2-netwok-policy/04-allow-demo-web.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-demo-web
  namespace: demo-web
spec:
  podSelector:
    matchLabels:
      app: demo-web
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 80
    from: []
